refactor and media queries started

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="Simon Kutsche - Machine Learning Engineer. Explore my professional experience, projects, education, and skills. Contact me for collaboration or inquiries.">
     <title>Simon Kutsche - Machine Learning Engineer</title>
     <link rel="stylesheet" href="styles/general.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="styles/about.css">
+
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,7 +58,7 @@
                 He has diligently overseen project coordination and delivery as a Scrum Master, ensuring the seamless functioning of collaborative efforts.
             </p>
             <p>
-                In addition to his extensive professional endeavors, he is currently contributing to the field by sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
+                In addition to his extensive professional endeavors, he is currently contributing to the field by sharing his knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
             </p>
 
             <h3>Notable Achievements</h3>
@@ -79,56 +83,56 @@
                 <p class="section-headline"><a href="#experience">Experience</a></p>
             </div>
 
-            <div class="experience-item-container">
+            <div class="item-container">
                 <a href="https://www.github.com/Simon1307" target="_blank">
-                    <img class="experience-item-img" src="images/experience1.jpg" alt="Experience 1 Image">
+                    <img class="item-img" src="images/experience1.jpg" alt="Experience 1 Image">
                 </a>
-                <div class="experience-details">
-                    <a class="experience-details-a" href="https://www.github.com/Simon1307" target="_blank">
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307" target="_blank">
                         <p>Machine Learning Engineer at Robert Bosch GmbH</p>
                     </a>
-                    <p class="experience-details-description">Developed a Deep Learning-based process monitoring system using LSTM-
+                    <p class="details-description">Developed a Deep Learning-based process monitoring system using LSTM-
                         Autoencoder for real-time anomaly detection in multivariate sensor data,
                         contributing to increased availability and prevention of damage to expensive
                         workpieces.</p>
                 </div>
             </div>
 
-            <div class="experience-item-container">
+            <div class="item-container">
                 <a href="https://www.github.com/Simon1307/MTL" target="_blank">
-                    <img class="experience-item-img" src="images/experience2_1.jpg" alt="Experience 2 Image">
+                    <img class="item-img" src="images/experience2_1.jpg" alt="Experience 2 Image">
                 </a>
-                <div class="experience-details">
-                    <a class="experience-details-a" href="https://www.github.com/Simon1307/MTL" target="_blank">
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307/MTL" target="_blank">
                         <p>Deep Learning Engineer Intern at Bosch Center for Artificial Intelligence (BCAI)</p>
                     </a>
-                    <p class="experience-details-description">Developed two novel loss weighting methods for Multi-task learning (MTL) that outperformed state-of-the-art methods. Incorporated novel methods into the existing code base of Bosch and Cariad (corporate partner) for automated driving. Compared loss balancing methods from the literature on tasks such as semantic segmentation, object detection, depth, and surface normal estimation on scene understanding datasets such as Cityscapes and NYUv2. Work led to the two novel loss weighting methods being registered as patents and two paper submissions to the well recognized scientific conference CVPR (2023 and 2024).
+                    <p class="details-description">Developed two novel loss weighting methods for Multi-task learning (MTL) that outperformed state-of-the-art methods. Incorporated novel methods into the existing code base of Bosch and Cariad (corporate partner) for automated driving. Compared loss balancing methods from the literature on tasks such as semantic segmentation, object detection, depth, and surface normal estimation on scene understanding datasets such as Cityscapes and NYUv2. Work led to the two novel loss weighting methods being registered as patents and two paper submissions to the well recognized scientific conference CVPR (2023 and 2024).
                     </p>
                 </div>
             </div>
 
-            <div class="experience-item-container">
+            <div class="item-container">
                 <a href="https://www.github.com/Simon1307" target="_blank">
-                    <img class="experience-item-img" src="images/experience3.jpg" alt="Experience 3 Image">
+                    <img class="item-img" src="images/experience3.jpg" alt="Experience 3 Image">
                 </a>
-                <div class="experience-details">
-                    <a class="experience-details-a" href="https://www.github.com/Simon1307" target="_blank">
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307" target="_blank">
                         <p>Data Engineer at Scalefree International GmbH</p>
                     </a>
-                    <p class="experience-details-description">Developed processes for loading the staging area and the raw data vault by
+                    <p class="details-description">Developed processes for loading the staging area and the raw data vault by
                         employing AWS services such as S3, Lambda, and Batch. Led the internal BI development team as a Scrum Master.</p>
                 </div>
             </div>
 
-            <div class="experience-item-container">
+            <div class="item-container">
                 <a href="https://www.github.com/Simon1307/srp-project" target="_blank">
-                    <img class="experience-item-img" src="images/experience4.jpg" alt="Experience 4 Image">
+                    <img class="item-img" src="images/experience4.jpg" alt="Experience 4 Image">
                 </a>
-                <div class="experience-details">
-                    <a class="experience-details-a" href="https://www.github.com/Simon1307/srp-project" target="_blank">
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307/srp-project" target="_blank">
                         <p>Student Research Intern at University of Hildesheim</p>
                     </a>
-                    <p class="experience-details-description">
+                    <p class="details-description">
                         Conducted image-to-image translation between the domains of regular images and artworks with Deep Generative Adversarial Networks.
                         Enhanced CycleGAN by introducing a two-objective discriminator as regularization, incorporating an adversarial self-defense for better cycle-consistency,
                         and applying differentiable augmentation on the target domain with less data. Employed agile intercultural project management techniques to manage the
@@ -146,33 +150,33 @@
                 <p class="section-headline"><a href="#projects">Projects</a></p>
             </div>
 
-            <div class="projects-item-container">
+            <div class="item-container">
                 <a href="https://www.github.com/Simon1307/gan" target="_blank">
-                    <img class="projects-item-img" src="images/web_app_picture.jpg" alt="Project 1 Image">
+                    <img class="item-img" src="images/web_app_picture.jpg" alt="Project 1 Image">
                 </a>
-                <div class="projects-details">
-                    <a class="projects-details-a" href="https://www.github.com/Simon1307/gan" target="_blank">
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307/gan" target="_blank">
                         <p>Web App for Generating Art Pieces</p>
                     </a>
-                    <p class="projects-details-description">
+                    <p class="details-description">
                         Designed and developed a Flask-based web application to deploy a trained CycleGAN model on a Monet dataset
                         enabling users to generate art pieces based on their input images.
                     </p>
                 </div>
             </div>
 
-            <div class="projects-item-container">
+            <div class="item-container">
                 <a href="https://www.github.com/Simon1307/mlproject" target="_blank">
-                    <img class="projects-item-img" src="images/project2.jpg" alt="Project 2 Image">
+                    <img class="item-img" src="images/project2.jpg" alt="Project 2 Image">
                 </a>
-                <div class="projects-details">
-                    <a class="projects-details-a" href="https://www.github.com/Simon1307/mlproject" target="_blank">
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307/mlproject" target="_blank">
                         <p>End-to-End ML Framework with Continuous Delivery Pipeline</p>
                     </a>
-                    <p class="projects-details-description">
+                    <p class="details-description">
                         Implemented a comprehensive framework for developing, training, and deploying machine learning models.
                         This end-to-end ML pipeline includes data ingestion, transformation, and model training as employed in industry settings.
-                        Deployable with a Flask-based web application for predictions in conjunction with AWS BEanstalk and AWS Codepipeline to obtain a continuous delivery pipeline.
+                        Deployable with a Flask-based web application for predictions in conjunction with AWS Beanstalk and AWS Codepipeline to obtain a continuous delivery pipeline.
                     </p>
                 </div>
             </div>
@@ -199,7 +203,7 @@
                 <div class="education-details">
                     <h3>Business Information Systems (Bachelor of Science)</h3>
                     <p>University of Applied Sciences and Arts Hannover</p>
-                    <p>2016-2023</p>
+                    <p>2016-2020</p>
                 </div>
             </div>
         </div>
