--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/home.css">
     <link rel="stylesheet" href="styles/about.css">
-
-
+    <link rel="stylesheet" href="styles/education.css">
+    <link rel="stylesheet" href="styles/skills.css">
+    <link rel="stylesheet" href="styles/contact.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -294,7 +295,7 @@
 
     <section id="contact" class="contact-section">
         <div class="contact-section-container">
-            <div class="row">
+            <div class="contact-grid">
                 <div class="contact-left">
                     <h1 class="section-headline contact-headline">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i> simon.kutsche@gmail.com</p>
