--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-5Gllm0nOuRzFTSRRnCFA5/j+p9kf63jeim+8V1RGMPiI46G4R/Jt2Q8O6Op/R/Xl6YJVHBC+CtLwSWqX/wyXYg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <script src="https://kit.fontawesome.com/57b9706a52.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header class="header">
+        <div class="burger-menu-icon" onclick="toggleMenu()">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <div class="header-right-section">
-            <div><a href="#home">HOME</a></div>
-            <div><a href="#about">ABOUT</a></div>
-            <div><a href="#experience">EXPERIENCE</a></div>
-            <div><a href="#projects">PROJECTS</a></div>
-            <div><a href="#education">EDUCATION</a></div>
-            <div><a href="#skills">SKILLS</a></div>
-            <div><a href="assets/resume.pdf" download="resume-simon-kutsche.pdf" target="_blank">RESUME</a></div>
-            <div><a href="#contact">CONTACT</a></div>
+            <div class="header-links">
+                <div><a href="#home">HOME</a></div>
+                <div><a href="#about">ABOUT</a></div>
+                <div><a href="#experience">EXPERIENCE</a></div>
+                <div><a href="#projects">PROJECTS</a></div>
+                <div><a href="#education">EDUCATION</a></div>
+                <div><a href="#skills">SKILLS</a></div>
+                <div><a href="assets/resume.pdf" download="resume-simon-kutsche.pdf" target="_blank">RESUME</a></div>
+                <div><a href="#contact">CONTACT</a></div>
+            </div>
         </div>
     </header>
 
@@ -300,10 +308,12 @@
                     <h1 class="section-headline contact-headline">Contact Me</h1>
                     <p><i class="fa-solid fa-paper-plane"></i> simon.kutsche@gmail.com</p>
                     <p><i class="fa-solid fa-square-phone"></i>+1 (954) 802-9906</p>
+                    
                     <div class="social-icons">
                         <a href="https://www.github.com/Simon1307"><i class="fa-brands fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/simon-kutsche/"><i class="fa-brands fa-linkedin"></i></a>
                     </div>
+
                     <div class="download-resume-button"><a href="assets/resume.pdf" class="button">Download Resume</a></div>
                 </div>
 
@@ -325,6 +335,14 @@
     </footer>
 
     <script src="scripts/script.js"></script>
+    
+    <script>
+        // Add the following script to your existing JavaScript file or in a <script> tag at the end of your body
+        function toggleMenu() {
+        const header = document.querySelector('.header');
+        header.classList.toggle('burger-menu-active');
+        }
+    </script>
 
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbwA8_m-VdiyuTkQuEgENd5zNczg7N9yzeIMm86sKMtMw0tw0Kbx6KOx1Ko-54c5krAR/exec'
