--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-5Gllm0nOuRzFTSRRnCFA5/j+p9kf63jeim+8V1RGMPiI46G4R/Jt2Q8O6Op/R/Xl6YJVHBC+CtLwSWqX/wyXYg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <script src="https://kit.fontawesome.com/57b9706a52.js" crossorigin="anonymous"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-N07T3R7XKN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-N07T3R7XKN');
+    </script>
+
 </head>
 
 <body>
