--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         <div class="about-section">
             <h2>Professional</h2>
             <p>
-                Simon Kutsche is an experienced Machine Learning Engineer and has contributed his expertise to a range of projects in intercultural teams spanning from 3 to 10 members.
+                As an experienced Machine Learning Engineer, I have contributed my expertise to various projects within intercultural teams ranging from 3 to 10 members.
             </p>
             <p>
-                He has diligently overseen project coordination and delivery as a Scrum Master, ensuring the seamless functioning of collaborative efforts.
+                I have diligently overseen project coordination and delivery in the role of a Scrum Master, ensuring the seamless functioning of collaborative efforts.
             </p>
             <p>
-                In addition to his extensive professional endeavors, he is currently contributing to the field by sharing his knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
+                In addition to my extensive professional endeavors, I am currently contributing to the field by sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
             </p>
 
             <h3>Notable Achievements</h3>
@@ -85,13 +85,14 @@
                 <li>Real-time monitoring system for CNC machine tool data using deep learning</li>
             </ul>
 
-
             <h2>Personal</h2>
             <p>
-                Simon has citizenship for the United States of America and Germany (dual citizenship). He was raised in Germany and is currently residing in Miami, FL, USA.
+                I hold citizenship for the United States of America and Germany (dual citizenship). I was raised in Germany and am currently residing in Miami, FL, USA.
             </p>
-                <p>Hobbies include programming, soccer, and backpacking.</p>
-            </div>
+            <p>
+                My hobbies include programming, soccer, and backpacking.
+            </p>
+
         </div>
     </section>
 
@@ -109,10 +110,9 @@
                     <a class="details-a" href="https://www.github.com/Simon1307" target="_blank">
                         <p>Machine Learning Engineer at Robert Bosch GmbH</p>
                     </a>
-                    <p class="details-description">Developed a Deep Learning-based process monitoring system using LSTM-
-                        Autoencoder for real-time anomaly detection in multivariate sensor data,
-                        contributing to increased availability and prevention of damage to expensive
-                        workpieces.</p>
+                    <p class="details-description">
+                        Created an innovative Deep Learning-driven process monitoring system employing LSTM-Autoencoder technology. The system excels in real-time anomaly detection within multivariate sensor data, significantly enhancing operational availability and preventing potential damage to valuable workpieces.
+                    </p>
                 </div>
             </div>
 
@@ -124,7 +124,9 @@
                     <a class="details-a" href="https://www.github.com/Simon1307/MTL" target="_blank">
                         <p>Deep Learning Engineer Intern at Bosch Center for Artificial Intelligence (BCAI)</p>
                     </a>
-                    <p class="details-description">Developed two novel loss weighting methods for Multi-task learning (MTL) that outperformed state-of-the-art methods. Incorporated novel methods into the existing code base of Bosch and Cariad (corporate partner) for automated driving. Compared loss balancing methods from the literature on tasks such as semantic segmentation, object detection, depth, and surface normal estimation on scene understanding datasets such as Cityscapes and NYUv2. Work led to the two novel loss weighting methods being registered as patents and two paper submissions to the well recognized scientific conference CVPR (2023 and 2024).
+                    <p class="details-description">
+                        Innovated two cutting-edge loss weighting methods for Multi-task Learning (MTL) that surpassed existing state-of-the-art approaches. Successfully integrated these novel methods into the established codebases of Bosch and Cariad (corporate partner) for automated driving applications. Conducted comprehensive evaluations of loss balancing techniques from the literature across various tasks, including semantic segmentation, object detection, depth, and surface normal estimation, using scene understanding datasets such as Cityscapes and NYUv2.
+                        My work resulted in the registration of the two groundbreaking loss weighting methods as patents, and it also paved the way for the submission of two papers to the prestigious scientific conference CVPR (2023 and 2024).
                     </p>
                 </div>
             </div>
@@ -137,8 +139,9 @@
                     <a class="details-a" href="https://www.github.com/Simon1307" target="_blank">
                         <p>Data Engineer at Scalefree International GmbH</p>
                     </a>
-                    <p class="details-description">Developed processes for loading the staging area and the raw data vault by
-                        employing AWS services such as S3, Lambda, and Batch. Led the internal BI development team as a Scrum Master.</p>
+                    <p class="details-description">
+                        Developed processes for loading the staging area and the raw data vault by employing AWS services such as S3, Lambda, and Batch. Led the internal BI development team as a Scrum Master.
+                    </p>
                 </div>
             </div>
 
@@ -177,8 +180,7 @@
                         <p>Web App for Generating Art Pieces</p>
                     </a>
                     <p class="details-description">
-                        Designed and developed a Flask-based web application to deploy a trained CycleGAN model on a Monet dataset
-                        enabling users to generate art pieces based on their input images.
+                        Designed and developed a Flask-based web application to deploy a trained CycleGAN model on a Monet dataset. Enabled users to generate art pieces based on their input images.
                     </p>
                 </div>
             </div>
@@ -192,9 +194,7 @@
                         <p>End-to-End ML Framework with Continuous Delivery Pipeline</p>
                     </a>
                     <p class="details-description">
-                        Implemented a comprehensive framework for developing, training, and deploying machine learning models.
-                        This end-to-end ML pipeline includes data ingestion, transformation, and model training as employed in industry settings.
-                        Deployable with a Flask-based web application for predictions in conjunction with AWS Beanstalk and AWS Codepipeline to obtain a continuous delivery pipeline.
+                        Implemented a comprehensive framework for developing, training, and deploying machine learning models. This end-to-end ML pipeline includes data ingestion, transformation, and model training as employed in industry settings. Deployable with a Flask-based web application for predictions in conjunction with AWS Beanstalk and AWS Codepipeline to obtain a continuous delivery pipeline.
                     </p>
                 </div>
             </div>
