--- a/index.html
+++ b/index.html
@@ -195,6 +195,20 @@
                 </div>
             </div>
 
+            <div class="item-container">
+                <a href="https://www.github.com/Simon1307/q-learning" target="_blank">
+                    <img class="item-img" src="images/project3.png" alt="Project 3 Image">
+                </a>
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307/q-learning" target="_blank">
+                        <p>Reinforcement Learning with Q-Learning for Mountain Car Environment</p>
+                    </a>
+                    <p class="details-description">
+                        Implemented the Q-learning algorithm in Python with NumPy and applied it to the Mountain Car environment using the OpenAI Gym library. 
+                    </p>
+                </div>
+            </div>
+
         </div>
 
     <section id="education" class="education-section">
@@ -336,7 +350,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Simon Kutsche - Machine Learning Engineer</p>
+        <p>&copy; 2024 Simon Kutsche - Machine Learning Engineer</p>
     </footer>
 
     <script src="scripts/script.js"></script>
