--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 I have diligently overseen project coordination and delivery in the role of a Scrum Master, ensuring the seamless functioning of collaborative efforts.
             </p>
             <p>
-                In addition to my extensive professional endeavors, I am currently contributing to the field by sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, promoting the next generation of data science enthusiasts.
+                In addition to my current role as an AI Engineer at Aersale, Inc., where I contribute to advancing AI technologies, I am also actively involved in sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, nurturing the next generation of data science enthusiasts.
             </p>
 
             <h3>Notable Achievements</h3>
