--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Simon Kutsche - Machine Learning Engineer. Explore my professional experience, projects, education, and skills. Contact me for collaboration or inquiries.">
-    <title>Simon Kutsche - Machine Learning Engineer</title>
+    <meta name="description" content="Simon Kutsche - Consultant for AI and Machine Learning. Explore my professional experience, projects, education, and skills. Contact me for collaboration or inquiries.">
+    <title>Simon Kutsche - Consultant for AI and Machine Learning</title>
     <link rel="stylesheet" href="styles/general.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/home.css">
@@ -43,6 +43,7 @@
                 <div><a href="#about">ABOUT</a></div>
                 <div><a href="#experience">EXPERIENCE</a></div>
                 <div><a href="#projects">PROJECTS</a></div>
+                <div><a href="#publications-patents">PUBLICATIONS & PATENTS</a></div>
                 <div><a href="#education">EDUCATION</a></div>
                 <div><a href="#skills">SKILLS</a></div>
                 <div><a href="assets/resume.pdf" download="resume-simon-kutsche.pdf" target="_blank">RESUME</a></div>
@@ -57,7 +58,7 @@
         <div class="home-section-container">
             <div class="home-text-container">
                 <p class="home-text-name"><a href="#about">Simon Kutsche</a></p>
-                <p class="home-text-job">Machine Learning Engineer</p>
+                <p class="home-text-job">Consultant for AI and Machine Learning</p>
             </div>
         </div>
     </section>
@@ -70,25 +71,30 @@
         <div class="about-section">
             <h2>Professional</h2>
             <p>
-                As an experienced Machine Learning Engineer, I have contributed my expertise to various projects within intercultural teams ranging from 3 to 10 members.
+                Results-driven AI and Machine Learning Engineer Consultant with a proven track record in leading and executing cutting-edge AI solutions that drive business transformation.
             </p>
             <p>
-                I have diligently overseen project coordination and delivery in the role of a Scrum Master, ensuring the seamless functioning of collaborative efforts.
+                Expert in developing and deploying sophisticated machine learning models using technologies like Python, PyTorch, TensorFlow, Keras, and scikit-learn, with a deep focus on generative AI, Computer Vision, and anomaly detection.
             </p>
             <p>
-                In addition to my current role as an AI Engineer at Aersale, Inc., where I contribute to advancing AI technologies, I am also actively involved in sharing my knowledge and expertise as an instructor for a Data Science Bootcamp at Miami Dade College, nurturing the next generation of data science enthusiasts.
+                Demonstrated leadership in managing cross-functional teams, driving AI project lifecycles, and implementing CI/CD pipelines, ensuring the seamless integration and scalability of AI solutions.           
             </p>
-
+            <p>
+                Extensive experience with cloud platforms (AWS, Azure), containerization (Docker, Kubernetes), and distributed computing, leveraging large-scale data to optimize business processes and decision-making.
+            </p>
+            <p>
+                Proven ability to take ownership of AI initiatives, from conceptualization to deployment, and mentor teams to achieve technical excellence.            
+            </p>
+            <p>
+                Adept at aligning AI strategy with organizational goals to deliver impactful, business-critical results.
+            </p>
             <h3>Notable Achievements</h3>
             <ul>
                 <li>Patented innovations in loss weighting strategies for neural networks</li>
-                <li>Real-time monitoring system for CNC machine tool data using deep learning</li>
+                <li>Published paper at prestigious conference GCPR 2024</li>
+                <li>Developed and deployed scalable AI solutions for Fortune 500 companies</li>
+                <li>Led cross-functional teams to deliver successful AI projects</li>
             </ul>
-
-            <h2>Personal</h2>
-            <p>
-                I hold citizenship for the United States of America and Germany (dual citizenship). I was raised in Germany and am currently residing in Miami, FL, USA.
-            </p>
         </div>
     </section>
 
@@ -100,6 +106,32 @@
 
             <div class="item-container">
                 <a href="https://www.github.com/Simon1307" target="_blank">
+                    <img class="item-img" src="images/experience0.jpg" alt="Experience 0 Image">
+                </a>
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307" target="_blank">
+                        <p>Machine Learning Engineer at KUNGFU.AI</p>
+                    </a>
+                    <p class="details-description">
+                        Developed and optimized a Retrieval-Augmented Generation (RAG) LLM application to automate contract analysis for a Fortune 500 infrastructure services client, leveraging advanced NLP techniques and vector-based search to improve clause detection accuracy and reduce manual legal review time.
+                    </div>
+            </div>
+
+            <div class="item-container">
+                <a href="https://www.github.com/Simon1307" target="_blank">
+                    <img class="item-img" src="images/experience0_1.jpg" alt="Experience 0_1 Image">
+                </a>
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307" target="_blank">
+                        <p>Artificial Intelligence Engineer at AerSale, Inc.</p>
+                    </a>
+                    <p class="details-description">
+                        Designed and implemented a CI/CD-enabled system integrating Retrieval-Augmented Generation (RAG), fine-tuned LLMs, Pinecone vector database, and LangChain to extract information from engine documents in a generative AI-powered chatbot. This solution significantly improved efficiency for internal users involved in engine buying processes by enabling seamless information retrieval and contextual understanding. Developed a machine learning model leveraging internal engine component data and external sources to predict component demand, optimizing inventory strategies and enhancing decision-making. Additionally, utilized Power BI and SQL to create a comprehensive report integrating BTS flight and weather data, demonstrating potential cost savings for airlines through AerSale’s AerAware product, ultimately driving increased revenue by showcasing its impact on pilot vision and operational efficiency.
+                    </div>
+            </div>
+
+            <div class="item-container">
+                <a href="https://www.github.com/Simon1307" target="_blank">
                     <img class="item-img" src="images/experience1.jpg" alt="Experience 1 Image">
                 </a>
                 <div class="details">
@@ -107,8 +139,7 @@
                         <p>Machine Learning Engineer at Robert Bosch GmbH</p>
                     </a>
                     <p class="details-description">
-                        Created an innovative Deep Learning-driven process monitoring system employing LSTM-Autoencoder technology. The system excels in real-time anomaly detection within multivariate sensor data, significantly enhancing operational availability and preventing potential damage to valuable workpieces.
-                    </p>
+                        Developed a Deep Learning-based process monitoring system using an LSTM-Autoencoder for real-time anomaly detection in multivariate sensor data, enhancing equipment availability and preventing damage to expensive workpieces. The model was extended to monitor multiple identical CNC machines, achieving an average F1-score of 0.96 across various scenarios. Deployment was streamlined using AWS SageMaker for model training, AWS IoT for data ingestion, and CI/CD pipelines with AWS CodePipeline to ensure continuous improvement and deployment efficiency.                    </p>
                 </div>
             </div>
 
@@ -121,8 +152,7 @@
                         <p>Deep Learning Engineer Intern at Bosch Center for Artificial Intelligence (BCAI)</p>
                     </a>
                     <p class="details-description">
-                        Innovated two cutting-edge loss weighting methods for Multi-task Learning (MTL) that surpassed existing state-of-the-art approaches. Successfully integrated these novel methods into the established codebases of Bosch and Cariad (corporate partner) for automated driving applications. Conducted comprehensive evaluations of loss balancing techniques from the literature across various tasks, including semantic segmentation, object detection, depth, and surface normal estimation, using scene understanding datasets such as Cityscapes and NYUv2.
-                        My work resulted in the registration of the two groundbreaking loss weighting methods as patents, and it also paved the way for the submission of two papers to the prestigious scientific conference CVPR (2023 and 2024).
+                        Developed cutting-edge loss weighting methods for multi-task learning in autonomous driving, achieving superior performance over industry benchmarks. Extensive evaluations were conducted on scene understanding tasks, including semantic segmentation, object detection, depth estimation, and surface normal estimation, leveraging datasets like Cityscapes and NYUv2 to establish a robust evaluation framework. These novel methods were seamlessly integrated into the existing autonomous driving software, ensuring compatibility and performance optimization. The research was published in GCPR 2024, contributing to advancements in neural networks and autonomous driving, with two registered patents recognizing the innovation and solidifying its intellectual property value.
                     </p>
                 </div>
             </div>
@@ -136,24 +166,7 @@
                         <p>Data Engineer at Scalefree International GmbH</p>
                     </a>
                     <p class="details-description">
-                        Developed processes for loading the staging area and the raw data vault by employing AWS services such as S3, Lambda, and Batch. Led the internal BI development team as a Scrum Master.
-                    </p>
-                </div>
-            </div>
-
-            <div class="item-container">
-                <a href="https://www.github.com/Simon1307/srp-project" target="_blank">
-                    <img class="item-img" src="images/experience4.jpg" alt="Experience 4 Image">
-                </a>
-                <div class="details">
-                    <a class="details-a" href="https://www.github.com/Simon1307/srp-project" target="_blank">
-                        <p>Student Research Intern at University of Hildesheim</p>
-                    </a>
-                    <p class="details-description">
-                        Conducted image-to-image translation between the domains of regular images and artworks with Deep Generative Adversarial Networks.
-                        Enhanced CycleGAN by introducing a two-objective discriminator as regularization, incorporating an adversarial self-defense for better cycle-consistency,
-                        and applying differentiable augmentation on the target domain with less data. Employed agile intercultural project management techniques to manage the
-                        project successfully.
+                        Led the internal Business Intelligence development team as a Scrum Master, fostering efficient and collaborative processes for successful BI initiatives. Designed and implemented streamlined data ingestion workflows for the staging area and raw data vault using AWS services such as S3, Lambda, and Batch, improving efficiency and reliability. Collaborated on a Tableau-based data visualization project to analyze customer engagement and optimize marketing strategies for a leading e-commerce client, contributing to a 15% increase in conversion rates within six months.
                     </p>
                 </div>
             </div>
@@ -165,6 +178,23 @@
         <div class="projects-section-container">
             <div class="section-text-container">
                 <p class="section-headline"><a href="#projects">Projects</a></p>
+            </div>
+
+            <div class="item-container">
+                <a href="https://www.github.com/Simon1307/srp-project" target="_blank">
+                    <img class="item-img" src="images/experience4.jpg" alt="Experience 4 Image">
+                </a>
+                <div class="details">
+                    <a class="details-a" href="https://www.github.com/Simon1307/srp-project" target="_blank">
+                        <p>Student Research Project at University of Hildesheim</p>
+                    </a>
+                    <p class="details-description">
+                        Conducted image-to-image translation between the domains of regular images and artworks with Deep Generative Adversarial Networks.
+                        Enhanced CycleGAN by introducing a two-objective discriminator as regularization, incorporating an adversarial self-defense for better cycle-consistency,
+                        and applying differentiable augmentation on the target domain with less data. Employed agile intercultural project management techniques to manage the
+                        project successfully.
+                    </p>
+                </div>
             </div>
 
             <div class="item-container">
@@ -210,6 +240,34 @@
             </div>
 
         </div>
+
+    <section id="publications-patents" class="publications-patents-section">
+        <div class="publications-patents-section-container">
+            <div class="section-text-container">
+                <p class="section-headline"><a href="#publications-patents">Publications & Patents</a></p>
+            </div>
+            
+            <div class="item-container">
+                <div class="details">
+                    <h3>Publication</h3>
+                    <p><strong>Analytical uncertainty-based loss weighting in multi-task learning</strong></p>
+                    <p>In Proceedings of GCPR 2024</p>
+                    <p>Proposed a novel uncertainty-based task-weighting method that optimally balances task losses in multi-task learning, achieving high performance with lower computational cost compared to brute-force approaches.</p>
+                    <a href="https://arxiv.org/abs/2408.07985" target="_blank">Read on arXiv</a>
+                </div>
+            </div>
+            
+            <div class="item-container">
+                <div class="details">
+                    <h3>Patent</h3>
+                    <p><strong>Computer-Implemented Method for Multi-Task Machine Learning</strong></p>
+                    <p>Patent No. DE 102023201578 (Issued 2024)</p>
+                    <p>Developed a method for dynamically activating and deactivating neurons in a multi-task learning neural network, enabling task-specific loss weighting based on uncertainty measures such as variance and entropy to improve training efficiency and performance.</p>
+                    <a href="https://patentscope.wipo.int/search/en/detail.jsf?docId=DE437326233" target="_blank">View Patent</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section id="education" class="education-section">
         <div class="education-section-container">
@@ -350,7 +408,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Simon Kutsche - Machine Learning Engineer</p>
+        <p>&copy; 2025 Simon Kutsche - Consultant for AI and Machine Learning</p>
     </footer>
 
     <script src="scripts/script.js"></script>
