--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 </a>
                 <div class="details">
                     <a class="details-a" href="https://www.github.com/Simon1307/MTL" target="_blank">
-                        <p>Deep Learning Engineer Intern at Bosch Center for Artificial Intelligence (BCAI)</p>
+                        <p>Deep Learning Engineer at Bosch Center for Artificial Intelligence (BCAI)</p>
                     </a>
                     <p class="details-description">
                         Developed cutting-edge loss weighting methods for multi-task learning in autonomous driving, achieving superior performance over industry benchmarks. Extensive evaluations were conducted on scene understanding tasks, including semantic segmentation, object detection, depth estimation, and surface normal estimation, leveraging datasets like Cityscapes and NYUv2 to establish a robust evaluation framework. These novel methods were seamlessly integrated into the existing autonomous driving software, ensuring compatibility and performance optimization. The research was published in GCPR 2024, contributing to advancements in neural networks and autonomous driving, with two registered patents recognizing the innovation and solidifying its intellectual property value.
